@startuml
' miniLms Class Diagram (PlantUML)
' View tip: VS Code PlantUML extension (jebbs.plantuml) → "PlantUML: Preview Current Diagram"

skinparam dpi 150
skinparam classAttributeIconSize 0
skinparam ArrowColor Gray
skinparam classFontSize 14
skinparam wrapWidth 220
skinparam defaultTextAlignment left

top to bottom direction

title miniLms Class Diagram

package "Models" {
  class User {
    +id: int
    +name: string
    +email: string
    +password: string
    +status: int
    +role: string
    +admin(): Admin
    +student(): Student
    +manager(): Manager
  }

  class Admin {
    +id: int
    +user_id: int
    +role: string
    +user(): User
  }

  class Student {
    +id: int
    +user_id: int
    +user(): User
  }

  class Manager {
    +id: int
    +user_id: int
    +Courses(): Course[]
    +user(): User
  }

  class Course {
    +id: int
    +manager_id: int
    +category: string
    +name: string
    +description: text
    +total_week: int
    +limit_count: int
    +total_price: int
    +status: int
    +approval_status: int
    +curriculums(): Curriculum[]
    +manager(): Manager
    +user(): User  ' hasOneThrough via Manager
  }

  class Curriculum {
    +id: int
    +Course_id: int
    +start: datetime
    +end: datetime
    +week_days: string
    +status: int
    +Course(): Course
  }

  class Attachment <<polymorphic>> {
    +id: int
    +attachable_type: string
    +attachable_id: int
    +type: string
    +path: string
    +meta: json
    +attachable(): (morphTo)
  }

  class Media <<polymorphic, Spatie>> {
    +id: int
    +model_type: string
    +model_id: int
    +collection_name: string
    +mime_type: string
    +isImage(): bool
    +isVideo(): bool
  }
}

package "Controllers" {
  class AdminController
  class AdminCourseController
  class AdminCurriculumController
  class AdminStudentController
  class AdminAuthController
}

package "Services" {
  class CourseService
  class CurriculumService
  class StudentService
  class ManagerService
  class MediaService
  class MailService
}

package "Policies" {
  class CoursePolicy
  class CurriculumPolicy
}

package "Events & Listeners" {
  class StoreCourseEvent
  class SendEmailListener
}

' === Relations (Models)
User "1" -- "0..1" Admin : hasOne
User "1" -- "0..1" Student : hasOne
User "1" -- "0..1" Manager : hasOne

Manager "1" --> "*" Course : hasMany
Course "*" --> "1" Manager : belongsTo

Course "1" --> "*" Curriculum : hasMany
Curriculum "*" --> "1" Course : belongsTo

Course ..> User : hasOneThrough (via Manager)

' Polymorphic relations
Attachment ..> Course : morphTo
Attachment ..> Curriculum : morphTo
Attachment ..> Manager : morphTo

Media ..> Course : morphTo (media)
Media ..> Manager : morphTo (media)

' === Controllers use Services
AdminCourseController ..> CourseService : uses
AdminCourseController ..> MediaService : uses
AdminCurriculumController ..> CurriculumService : uses
AdminStudentController ..> StudentService : uses
AdminController ..> ManagerService : uses
AdminAuthController ..> ManagerService : uses

' === Services work with Models
CourseService ..> Course : manages
CourseService ..> Curriculum : manages
CurriculumService ..> Curriculum : manages
StudentService ..> Student : manages
ManagerService ..> Manager : manages
MediaService ..> Media : manages

' === Policies authorize access
CoursePolicy ..> Course : authorizes
CurriculumPolicy ..> Curriculum : authorizes

' === Events / Listeners
StoreCourseEvent --> Course : payload
SendEmailListener ..> StoreCourseEvent : handles
SendEmailListener ..> MailService : uses

@enduml
